packages/svelte/tests/validator/samples/non-invalid-node-placement-if-snippet/input.svelte
<table>
	<tbody>
		<tr>
			{#snippet cell(v)}Value: {v}{/snippet}
			{#each [1, 2, 3] as v}
				<td>{@render cell(v)}</td>
			{/each}
		</tr>
	</tbody>
</table>