packages/svelte/tests/compiler-errors/samples/render-tag-invalid-call/main.svelte
{@render snippet.apply(null, [1, 2, 3])}